--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Páginas/simulador_cotas.html">Simulador de cotas</a>
+              <a class="nav-link" href="./Páginas/SimuladorDeCotas.html">Simulador de cotas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contato</a>
@@ -272,61 +272,58 @@
         </div>
 
         <!-- Modal Modalidade de cotas -->
-        <div class="modal fade" id="ModalidadeDeCotas" tabindex="-1" aria-labelledby="ModalidadeDeCotasLabel"
-          aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="ModalidadeDeCotasLabel">Quais as modalidades de cotas na UFT?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-              </div>
-              <div class="modal-body">
-                Nos processos seletivos (Vestibular e SISU) a UFT garante a oferta nas seguintes cotas, garantidas pela
-                Reserva Legal de Vagas (50%) para ingresso na graduação para candidatos egressos do sistema público de
-                ensino médio. Além disso, existem Ações Afirmativas (5% para quilombolas e 5% para Indígenas).<br><br>
-                O candidato deve escolher com atenção a sua modalidade de concorrência no momento da inscrição do
-                processo
-                seletivo, pois não será permitida alteração posteriormente. As vagas reservadas são divididas em oito
-                modalidades de cotas, destinadas exclusivamente aos candidatos que se enquadram nos critérios
-                abaixo:<br><br>
-                <span class="keyword">GRUPO L1</span> - Candidatos com renda familiar bruta per capita igual ou inferior
-                a
-                1,5 salário mínimo que tenham cursado integralmente o ensino médio em escolas públicas;<br><br>
-                <span class="keyword">GRUPO L2</span> - Candidatos autodeclarados pretos, pardos ou indígenas, com renda
-                familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o
-                ensino
-                médio em escolas públicas;<br><br>
-                <span class="keyword">GRUPO L5</span> - Candidatos que, independentemente da renda (art. 14, II,
-                Portaria
-                Normativa nº 18/2012 e suas alterações), tenham cursado integralmente o ensino médio em escolas
-                públicas;<br><br>
-                <span class="keyword">GRUPO L6</span> - Candidatos autodeclarados pretos, pardos ou indígenas que,
-                independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o
-                ensino médio em escolas públicas;<br><br>
-                <span class="keyword">GRUPO L9</span> - Candidatos com deficiência que tenham renda familiar bruta per
-                capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em
-                escolas
-                públicas;<br><br>
-                <span class="keyword">GRUPO L10</span> - Candidatos com deficiência autodeclarados pretos, pardos ou
-                indígenas, que tenham renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que
-                tenham
-                cursado integralmente o ensino médio em escolas públicas;<br><br>
-                <span class="keyword">GRUPO L13</span> - Candidatos com deficiência que, independentemente da renda
-                (art.
-                14, II, Portaria Normativa nº 18/2012 e suas alterações), tenham cursado integralmente o ensino médio em
-                escolas públicas;<br><br>
-                <span class="keyword">GRUPO L14</span> - Candidatos com deficiência autodeclarados pretos, pardos ou
-                indígenas que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012 e suas
-                alterações),
-                tenham cursado integralmente o ensino médio em escolas públicas.<br><br>
+        <!-- Modal para informações sobre processos seletivos -->
+<div class="modal fade" id="ModalidadeDeIngresso" tabindex="-1" aria-labelledby="ModalidadeDeIngressoLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModalidadeDeIngressoLabel">Processos Seletivos na UFT</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Texto sobre os processos seletivos -->
+        <p>
+          Para a maioria dos cursos de graduação presencial a UFT divide as vagas em 2 processos seletivos:
+        </p>
+        <p>
+          <strong>Concurso Vestibular</strong> – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso no semestre de 2024/1 as provas ocorreram em outubro. Os interessados devem acompanhar as atualizações no site da UFT e no site da Comissão Permanente de Seleção (Copese). Sobre edições anteriores, veja aqui.
+        </p>
+        <p>
+          <strong>SISU-Sistema de Seleção Unificada</strong> – a UFT oferece o restante das vagas, ou seja 50%, através deste processo que utiliza a nota do ENEM do ano anterior.
+        </p>
+        <p>
+          Atenção: o Vestibular e o SISU são processos seletivos distintos, ou seja, os candidatos podem participar de ambos, simultaneamente. Em caso de seleção nas duas modalidades, o estudante deverá optar por uma delas.
+        </p>
+        <p>
+          Após a utilização destes dois processos seletivos ainda tiver vagas remanescentes de algum deles a instituição pode utilizar de outras formas de seleção, como:
+        </p>
+        <ul>
+          <li><strong>PSEnem - Processo Seletivo complementar:</strong> gerido pela própria instituição, que utiliza a nota do ENEM. Neste processo seletivo são ofertadas as vagas não ocupadas pelo Vestibular e/ou SISU, por razões de não ocupação, remanejamentos, desistências, cancelamentos, indeferimentos e demais razões pelas quais possa ocorrer a vacância durante o Processo Seletivo, para ingresso no Semestre seguinte. Este tipo de Processo Seletivo por Nota do Enem para ingresso nos cursos de graduação presenciais da UFT, é destinado exclusivamente aos candidatos que tenham participado de pelo menos uma das edições do Exame Nacional do Ensino Médio (ENEM) conforme edital, independente de participação ou inscrição em quaisquer outros processos seletivos. Mais informações veja o site do PSC 2023/2.</li>
+        </ul>
+        <p>
+          Também há processos seletivos específicos para os cursos abaixo. Clique em cada um deles para obter informações mais detalhadas:
+        </p>
+        <ul>
+          <li><strong>Letras LIBRAS – Porto Nacional</strong></li>
+          <li><strong>Educação do Campo - Arraias e Tocantinópolis</strong></li>
+          <li><strong>Graduações a Distância - (Licenciaturas em Matemática, Física, Química, Música, Ciências Biológicas)</strong></li>
+        </ul>
+        <p>
+          Para quem já é aluno de graduação, existe o sistema de ocupação de vagas ociosas:
+        </p>
+        <ul>
+          <li><strong>Transferência Externa</strong> – para alunos de outras IES que já tenham integralizado um percentual específico do curso de origem, conforme edital</li>
+          <li><strong>Transferência Interna</strong> – para alunos da UFT que querem mudar de curso através de Processo seletivo especifico.</li>
+          <li><strong>Ingresso de Diplomado</strong> – para portadores de diploma de curso superior.</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!-- Modal Verificar autodeclaração -->
         <div class="modal fade" id="VerificarAutodeclaração" tabindex="-1"
@@ -377,9 +374,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Ingresso</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
@@ -444,7 +439,7 @@
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
-            A UFT oferta diversos cursos de graduação nos campi Arraias, Gurupi, Miracema e Palmas. Os cursos estão
+            A UFT oferta diversos cursos de graduação nos campi Arraias, Gurupi, Miracema, Porto Nacional e Palmas. Os cursos estão
             disponíveis no seguinte <a href="https://docs.uft.edu.br/share/s/JEgmM2KqTcixBR1wdm7zUA">link.</a>
           </p>
         </div>
@@ -461,9 +456,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Vestibular</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
@@ -473,7 +466,7 @@
 
           <div class="accordion">
             <div class="accordion-heading">
-              <h3>Como é o vestibular da UFT 2023?</h3>
+              <h3>Como é o vestibular da UFT?</h3>
               <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
@@ -494,9 +487,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Cotas</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
@@ -636,9 +627,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Pretos, Pardos, indígenas</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
@@ -703,9 +692,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Pessoas com deficiência</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
@@ -782,10 +769,7 @@
         <div class="col-12">
           <div class="setion-title text-center">
             <h1>Resultados e Convocações</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt
-              magnam
-              tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
-              consectetur? Nemo!</p>
+            <p></p>
             <div class="line"></div>
           </div>
         </div>
