--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao seu ingresso na <span
+          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem - vindo ao seu ingresso na <span
               class="text-brand">graduação</span></h1>
           <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
           <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos
@@ -153,7 +153,7 @@
             </div>
             <h5 class="mt-4">Quais são as modalidades de cotas na UFT?</h5>
             <p></p>
-            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#ModalidadeDeCotas">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#ModalidadeDeIngresso">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
@@ -261,7 +261,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
-                A UFT oferta diversos cursos de graduação nos campi Arraias, Gurupi, Miracema e Palmas. Os cursos estão
+                A UFT oferta diversos cursos de graduação nos campi Arraias, Gurupi, Miracema, Palmas e Porto Nacional. Os cursos estão
                 disponíveis no seguinte <a href="https://docs.uft.edu.br/share/s/JEgmM2KqTcixBR1wdm7zUA">link</a>
               </div>
               <div class="modal-footer">
@@ -826,7 +826,7 @@
       <div class="row justify-content-center">
         <div class="col-md-4 text-center">
           <div class="footer-logo">
-            <img src="./img/Logo-UFT.png" class="img-fluid" style="max-width: 100px; height: auto;">
+            <img src="./img/marcaUFT_vertical_fundotransparente_RGB.png" class="img-fluid" style="max-width: 150px; height: auto;">
           </div>
         </div>
       </div>
