--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <ul class="dropdown-menu dropdown-menu-light">
                 <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
                 <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
-                <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
+                <li><a class="dropdown-item" href="#SiSU">SiSU</a></li>
                 <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
                 <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
                 <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo, indígena</a></li>
@@ -90,12 +90,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem - vindo ao seu ingresso na <span
-              class="text-brand">graduação</span></h1>
-          <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
-          <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos
-              ver!</a>
-          </div>
+          <h1 class="display-2 fw-bold" data-aos="fade-up"> <span
+              class="text-brand"> </span></h1>
+          <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5"> </h4>
         </div>
       </div>
     </div>
@@ -457,6 +454,30 @@
         </div>
       </div>
   </section>
+
+
+
+  <section id="SiSU" class="section-padding section-connector">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title text-center">
+            <h1>SiSU</h1>
+            <p>
+              O SiSU é um sistema de seleção informatizado gerido pelo Ministério da Educação (MEC). É um sistema por meio do qual estudantes são selecionados para vagas em cursos de graduação oferecidos pelas instituições públicas e gratuitas de ensino superior que participam do programa. 
+  
+              Para participar dessa seleção, os candidatos utilizam as notas obtidas no Exame Nacional do Ensino Médio (ENEM) realizado no ano anterior ao processo seletivo. A seleção ocorre em uma única etapa de inscrição, na qual o candidato escolhe a instituição, curso e modalidade em que deseja concorrer, conforme as opções disponibilizadas por cada Instituição de Ensino Superior (IES).
+  
+              Para obter mais informações, acesse o site oficial do SiSU em <a href="https://sisu.mec.gov.br" target="_blank" style="color: #303050; text-decoration: underline;">https://sisu.mec.gov.br</a>.
+            </p>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  
 
 
 
