--- a/index.html
+++ b/index.html
@@ -476,6 +476,27 @@
       </div>
     </div>
   </section>
+
+
+
+  <section id="ProcessoSeletivo" class="section-padding section-connector">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title text-center">
+            <h1>Processo Seletivo</h1>
+            <p>
+              Processo Seletivo é o termo usado para descrever as diversas formas de admissão e seleção de candidatos para cursos de graduação. Essas formas podem incluir processos seletivos seriados, avaliação contínua, processo seletivo vocacionado, provas agendadas, análise de histórico escolar e entrevistas, entre outros métodos.
+
+              Na Universidade Federal do Tocantins (UFT), atualmente, são utilizados dois tipos de processos seletivos. Para saber mais detalhes sobre as formas de ingresso na graduação na UFT, consulte a pergunta <b>"Quais são as opções de ingresso na graduação na UFT?".</b>
+            </p>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   
   
 
