--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
                 <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
                 <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo, indígena</a></li>
-                <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/chamamentos</a></li>
+                <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/convocações</a></li>
                 <li><a class="dropdown-item" href="#Matrícula e documentação">Matrícula/Documentação</a></li>
                 <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
                 <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a></li>
@@ -784,7 +784,7 @@
 
 
 
-  <section id="Confirmação de interesse" class="section-padding section-connector">
+  <section id="Resultado e chamamentos" class="section-padding section-connector">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -835,6 +835,24 @@
               href="www.copese.uft.edu.br">www.copese.uft.edu.br</a><br><br>
 
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <section id="Comprovação de renda" class="section-padding section-connector">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title text-center">
+            <h1>Comprovação de Renda</h1>
+            <p>
+              A comprovação de renda é necessário para os candidatos inscritos e selecionados nas modalidades L1, L2, L9 e L10, onde o candidato deverá comprovar a percepção de renda familiar bruta mensal per capita igual ou inferior a 1,5 (um vírgula cinco) salários mínimos per capita, que será apurada de acordo com procedimentos descritos no Edital.
+            </p>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
     </div>
