--- a/index.html
+++ b/index.html
@@ -860,6 +860,25 @@
 
 
 
+  <section id="Calouro" class="section-padding section-connector">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="section-title text-center">
+            <h1>Calouro</h1>
+            <p>
+              <strong>Atenção calouros,</strong> nesta nova etapa de suas vidas, fiquem ligados nas informações da instituição para vocês. Veja o <a href="https://ww2.uft.edu.br/index.php/retomada/apresentacao-retomada-3/manual" target="_blank" style="color: #303050; text-decoration: underline;">manual do acadêmico</a> e também disponibilizamos uma atendente Virtual Alice (Zap 63-3329-4032).
+            </p>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
   <footer class="mt-5 py-5">
     <div class="container">
       <div class="row justify-content-center">
