--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
                 <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a></li>
                 <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
-                <li><a class="dropdown-item" href="#Confirmação de interesse">Confirmação interesse</a></li>
-                <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
+                <li><a class="dropdown-item" href="#Convocação autodeclaração">Convocação autodeclaração</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -875,6 +874,29 @@
       </div>
     </div>
   </section>
+
+
+
+  <section id="ConvocacaoAutodeclaracao" class="section-padding section-connector">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="section-title text-center">
+                    <h1>Convocação Autodeclaração</h1>
+                    <p>
+                        O candidato passará por uma análise de sua autodeclaração étnico-racial conduzida por uma Comissão de Heteroidentificação, seguindo uma convocatória específica para este fim.
+
+                        Após a análise étnico-racial realizada pelas bancas da Comissão de Heteroidentificação, de acordo com a convocatória específica, o resultado será divulgado no site <a href="http://www.uft.edu.br/estudenauft" target="_blank" style="color: #303050; text-decoration: underline;">www.uft.edu.br/estudenauft</a>.
+
+                        Em caso de indeferimento da matrícula, os candidatos terão a possibilidade de apresentar recursos. Os procedimentos e prazos para a interposição de recurso serão informados no próprio Edital de Resultado da Análise de Condição étnico-racial, conforme mencionado no item anterior.
+                    </p>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 
