--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <li><a class="dropdown-item" href="#Processo seletivo">Processo seletivo</a></li>
                 <li><a class="dropdown-item" href="#Cotas">Cotas</a></li>
                 <li><a class="dropdown-item" href="#Pretos, Pardos e indígenas">Preto, Pardo, indígena</a></li>
+                <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a></li>
                 <li><a class="dropdown-item" href="#Resultado e chamamentos">Resultados/convocações</a></li>
                 <li><a class="dropdown-item" href="#Matrícula e documentação">Matrícula/Documentação</a></li>
                 <li><a class="dropdown-item" href="#Comprovação de renda">Comprovação de renda</a></li>
-                <li><a class="dropdown-item" href="#Pessoas com deficiência">Pessoa com deficiência</a></li>
                 <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
                 <li><a class="dropdown-item" href="#Convocação autodeclaração">Convocação autodeclaração</a></li>
                 <li>
@@ -838,6 +838,158 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <section id="Matrícula e documentação" class="section-padding section-connector">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="setion-title text-center">
+            <h1>Matrícula/Documentação</h1>
+            <p></p>
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-container">
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para matrícula na modalidade Ampla Concorrência-AC?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            a) Ficha Cadastral<br>
+            b) Ficha de Identificação Complementar – Diagnóstico de Deficiência<br>
+            c) Declaração de Inexistência de vínculo com outra universidade - Declaração de que não ocupa vaga em curso de graduação, em outra instituição pública de ensino superior brasileira – Lei 12.089/2009<br>
+            d) Termo de Responsabilidade e Veracidade das informações<br>
+            e) Certificado de Conclusão do Ensino Médio ou estudos equivalentes, registrado no Órgão competente ou Declaração, emitida por órgão competente, em que se ateste a Conclusão do Ensino Médio ou Declaração conforme edital<br>
+            f) Histórico Escolar do Ensino Médio, mesmo para os candidatos que já tenham curso superior<br>
+            g) Certidão de Casamento – quando for o caso<br>
+            h) Documento de Identidade - No caso de candidato estrangeiro, Cédula de Identidade expedida pela Polícia Federal, ou passaporte, com Visto Temporário de estudante válido;<br>
+            i) Cadastro de Pessoa Física – CPF próprio ou, ainda, Comprovante de Situação Cadastral no CPF com código de controle do comprovante obtida na página eletrônica: <a href="http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp">http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp</a><br>
+            j) Comprovante de residência atualizado em nome do candidato - Na ausência de comprovante de residência em nome do candidato, deverá ser apresentada declaração do responsável pelo imóvel onde o candidato reside e uma cópia da conta de água, luz ou telefone atualizada.<br>
+            k) Uma foto recente, tamanho 3x4;<br>
+            l) Para candidatos maiores de 18 anos, comprovante de quitação com a justiça eleitoral, que poderá ser emitido por meio do endereço eletrônico: <a href="http://www.tse.jus.br/eleitor/servicos/certidoes/certidao-de-quitacao-eleitoral">http://www.tse.jus.br/eleitor/servicos/certidoes/certidao-de-quitacao-eleitoral</a>;<br>
+            m) Para candidatos do sexo masculino maiores de 18 anos, comprovante de quitação com o serviço militar<br>
+            n) Para candidatos estrangeiros: Em caso de apresentação de documentos escolares provenientes de instituições do exterior, visto da autoridade consular brasileira do país em que o curso foi realizado, acompanhado da respectiva tradução oficial feita por tradutor juramentado e documento equivalente de convalidação de estudos, emitido pela Secretaria de Estado da Educação. Esta exigência não se aplica para os candidatos aprovados no sistema de aplicação da Lei 12.711/2012.
+        </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para matrícula na modalidade Quilombola-A2?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            a) Ficha Cadastral<br>
+            b) Ficha de Identificação Complementar – Diagnóstico de Deficiência<br>
+            c) Declaração de Inexistência de vínculo com outra universidade - Declaração de que não ocupa vaga em curso de graduação, em outra instituição pública de ensino superior brasileira – Lei 12.089/2009<br>
+            d) Termo de Responsabilidade e Veracidade das informações<br>
+            e) Certificado de Conclusão do Ensino Médio ou estudos equivalentes, registrado no Órgão competente ou Declaração, emitida por órgão competente, em que se ateste a Conclusão do Ensino Médio ou Declaração conforme edital<br>
+            f) Histórico Escolar do Ensino Médio, mesmo para os candidatos que já tenham curso superior<br>
+            g) Certidão de Casamento – quando for o caso<br>
+            h) Documento de Identidade - No caso de candidato estrangeiro, Cédula de Identidade expedida pela Polícia Federal, ou passaporte, com Visto Temporário de estudante válido;<br>
+            i) Cadastro de Pessoa Física – CPF próprio ou, ainda, Comprovante de Situação Cadastral no CPF com código de controle do comprovante obtida na página eletrônica: <a href="http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp">http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp</a><br>
+            j) Comprovante de residência atualizado em nome do candidato - Na ausência de comprovante de residência em nome do candidato, deverá ser apresentada declaração do responsável pelo imóvel onde o candidato reside e uma cópia da conta de água, luz ou telefone atualizada.<br>
+            k) Uma foto recente, tamanho 3x4;<br>
+            l) Para candidatos maiores de 18 anos, comprovante de quitação com a justiça eleitoral, que poderá ser emitido por meio do endereço eletrônico: <a href="http://www.tse.jus.br/eleitor/servicos/certidoes/certidao-de-quitacao-eleitoral">http://www.tse.jus.br/eleitor/serviços/certidoes/certidao-de-quitacao-eleitoral</a>;<br>
+            m) Para candidatos do sexo masculino maiores de 18 anos, comprovante de quitação com o serviço militar<br>
+            n) Para candidatos estrangeiros: Em caso de apresentação de documentos escolares provenientes de instituições do exterior, visto da autoridade consular brasileira do país em que o curso foi realizado, acompanhado da respectiva tradução oficial feita por tradutor juramentado e documento equivalente de convalidação de estudos, emitido pela Secretaria de Estado da Educação. Esta exigência não se aplica para os candidatos aprovados no sistema de aplicação da Lei 12.711/2012.<br>
+            
+            a) Declaração emitida pela associação do quilombo de sua região, atestando que o mesmo é quilombola, contendo o nº do CNPJ da Associação, que deverá ser assinada pelo presidente da associação (reconhecida em cartório) e por outros 02 (dois) representantes da comunidade, contendo, ainda, e-mail, endereço e/ou telefones para contato. (Modelo disponível nas páginas: <a href="www.copese.uft.edu.br">www.copese.uft.edu.br</a> e <a href="www.uft.edu.br/estudenauft">www.uft.edu.br/estudenauft</a>).
+        </p>
+        </div>
+
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para matrícula na modalidade Indígena-A1?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            a) Ficha Cadastral<br>
+            b) Ficha de Identificação Complementar – Diagnóstico de Deficiência<br>
+            c) Declaração de Inexistência de vínculo com outra universidade - Declaração de que não ocupa vaga em curso de graduação, em outra instituição pública de ensino superior brasileira – Lei 12.089/2009<br>
+            d) Termo de Responsabilidade e Veracidade das informações<br>
+            e) Certificado de Conclusão do Ensino Médio ou estudos equivalentes, registrado no Órgão competente ou Declaração, emitida por órgão competente, em que se ateste a Conclusão do Ensino Médio ou Declaração conforme edital<br>
+            f) Histórico Escolar do Ensino Médio, mesmo para os candidatos que já tenham curso superior<br>
+            g) Certidão de Casamento – quando for o caso<br>
+            h) Documento de Identidade - No caso de candidato estrangeiro, Cédula de Identidade expedida pela Polícia Federal, ou passaporte, com Visto Temporário de estudante válido;<br>
+            i) Cadastro de Pessoa Física – CPF próprio ou, ainda, Comprovante de Situação Cadastral no CPF com código de controle do comprovante obtida na página eletrônica: <a href="http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp">http://www.receita.fazenda.gov.br/Aplicacoes/ATCTA/CPF/ConsultaPublica.asp</a><br>
+            j) Comprovante de residência atualizado em nome do candidato - Na ausência de comprovante de residência em nome do candidato, deverá ser apresentada declaração do responsável pelo imóvel onde o candidato reside e uma cópia da conta de água, luz ou telefone atualizada.<br>
+            k) Uma foto recente, tamanho 3x4;<br>
+            l) Para candidatos maiores de 18 anos, comprovante de quitação com a justiça eleitoral, que poderá ser emitido por meio do endereço eletrônico: <a href="http://www.tse.jus.br/eleitor/servicos/certidoes/certidao-de-quitacao-eleitoral">http://www.tse.jus.br/eleitor/serviços/certidoes/certidao-de-quitacao-eleitoral</a>;<br>
+            m) Para candidatos do sexo masculino maiores de 18 anos, comprovante de quitação com o serviço militar<br>
+            n) Para candidatos estrangeiros: Em caso de apresentação de documentos escolares provenientes de instituições do exterior, visto da autoridade consular brasileira do país em que o curso foi realizado, acompanhado da respectiva tradução oficial feita por tradutor juramentado e documento equivalente de convalidação de estudos, emitido pela Secretaria de Estado da Educação. Esta exigência não se aplica para os candidatos aprovados no sistema de aplicação da Lei 12.711/2012.<br>
+  
+            a) Registro administrativo de nascimento e óbito de índios (RANI) ou Declaração da respectiva comunidade sobre sua condição de pertencimento étnico, assinada por três (03) lideranças reconhecidas (devendo ser reconhecida firma em cartório de uma delas) – no mínimo 02 (dois) indígenas, com nº de identidade, endereço e telefone de contato – original. (Modelo disponível nas páginas: <a href="www.copese.uft.edu.br">www.copese.uft.edu.br</a> e <a href="www.uft.edu.br/estudenauft">www.uft.edu.br/estudenauft</a>).
+        </p>
+        </div>
+
+
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para comprovação de estudos em escola pública?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            a) Declaração de estudos (integrais) em escolas públicas - Declaração em que ateste ter cursado todas as séries do ensino médio em escolas públicas;<br>
+            b) Cópia do diploma/certificado ou declaração de conclusão do ensino médio;<br>
+            c) Cópia do histórico escolar de todas as séries do ensino médio, constando a informações de estudos em escola pública de todas as séries do ensino médio.
+        </p>
+        </div>
+
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para comprovação de renda familiar bruta igual ou inferior a 1,5 salário mínimo per capita?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            (Verificar o tópico comprovação de renda)
+        </p>
+        </div>
+
+
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Quais são os documentos necessários para comprovação de estudos em escola pública?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            a) Declaração de estudos (integrais) em escolas públicas - Declaração em que ateste ter cursado todas as séries do ensino médio em escolas públicas;<br>
+            b) Cópia do diploma/certificado ou declaração de conclusão do ensino médio;<br>
+            c) Cópia do histórico escolar de todas as séries do ensino médio, constando a informações de estudos em escola pública de todas as séries do ensino médio.
+        </p>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
 
 
 
