--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Páginas/SimuladorDeCotas.html">Simulador de cotas</a>
+              <a class="nav-link" href="./Páginas/SimuladorDeCotas.html">Simulador de Modalidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a class="nav-link" href="#Contato">Contato</a>
             </li>
           </ul>
         </div>
@@ -1790,6 +1790,45 @@
       </div>
     </div>
   </section>
+
+
+
+  <section id="Contato" class="section-padding section-connector">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title text-center">
+          <h1>Contatos</h1>
+          <p>Encontre nossas informações de contato abaixo.</p>
+          <div class="line"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row gy-4 text-center justify-content-center">
+      <div class="col-lg-4 col-sm-6">
+        <div class="service py-5 px-4 border">
+          <div class="service-icon">
+            <ion-icon name="call-outline"></ion-icon>
+          </div>
+          <h5 class="mt-4">Telefone</h5>
+          <p>Zap: 63-3329-4032</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6">
+        <div class="service py-5 px-4 border">
+          <div class="service-icon">
+            <ion-icon name="globe-outline"></ion-icon>
+          </div>
+          <h5 class="mt-4">Website</h5>
+          <p><a href="https://ww2.uft.edu.br/index.php/contatos" target="_blank">ww2.uft.edu.br/contatos</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
