--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="modal-text">
                   Para a maioria dos cursos de graduação presencial a UFT divide as vagas em 2 processos
                   seletivos:<br><br>
-                  Concurso Vestibular – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso
+                  <span class="keyword">Concurso Vestibular</span> – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso
                   no
                   semestre de 2023/2, as provas ocorreram em maio. Os interessados devem acompanhar as atualizações no
                   site da
@@ -377,7 +377,7 @@
           </div>
           <p class="accordion-content">
             Para a maioria dos cursos de graduação presencial a UFT divide as vagas em 2 processos seletivos:<br><br>
-            Concurso Vestibular – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso no
+            <span class="keyword">Concurso Vestibular</span> – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso no
             semestre de 2023/2, as provas ocorreram em maio. Os interessados devem acompanhar as atualizações no site da
             UFT e no site da Comissão Permanente de Seleção (Copese). Sobre edições anteriores, veja <span
               class="keyword">aqui</span>.<br><br>
