--- a/Páginas/SimuladorDeCotas.html
+++ b/Páginas/SimuladorDeCotas.html
@@ -36,44 +36,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#Modalidades">Sobre as Modalidades</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Principais Tópicos
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
-                                <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Processo seletivo">Processo
-                                        seletivo</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Cotas">Cotas</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pretos, Pardos e indígenas">Preto,
-                                        Pardo,
-                                        indígena</a></li>
-                                <li><a class="dropdown-item"
-                                        href="../index.html#Resultado e chamamentos">Resultados/chamamentos</a>
-                                </li>
-                                <li><a class="dropdown-item"
-                                        href="../index.html#Matrícula e documentação">Matrícula/Documentação</a>
-                                </li>
-                                <li><a class="dropdown-item" href="../index.html#Comprovação de renda">Comprovação de
-                                        renda</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pessoas com deficiência">Pessoa com
-                                        deficiência</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Confirmação de interesse">Confirmação
-                                        interesse</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
-                            </ul>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../index.html">Página Inicial</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link" href="#Contato">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -87,12 +54,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="display-2 fw-bold" data-aos="fade-up">Bem - vindo ao nosso <span
-                            class="text-brand">Simulador de Cotas</span></h1>
-                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Uma pesquisa mais rápida!</h4>
-                    <div data-aos="fade-up" data-aos-delay="200"><a href="#Simulador" class="btn btn-brand">Teste
-                            já!</a>
-                    </div>
+                    <h1 class="display-2 fw-bold" data-aos="fade-up"><span class="text-brand"></span></h1>
+                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5"></h4>
                 </div>
             </div>
         </div>
@@ -666,33 +629,75 @@
 
 
 
-                 <footer class="mt-5 py-5">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-4 text-center">
-                    <div class="footer-logo">
-                        <img src="../img/marcaUFT_vertical_fundotransparente_RGB.png" class="img-fluid" style="max-width: 150px; height: auto;">
+                <section id="Contato" class="section-padding section-connector">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="section-title text-center">
+                                    <h1>Contatos</h1>
+                                    <p>Encontre nossas informações de contato abaixo.</p>
+                                    <div class="line"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row gy-4 text-center justify-content-center">
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="service py-5 px-4 border">
+                                    <div class="service-icon">
+                                        <ion-icon name="call-outline"></ion-icon>
+                                    </div>
+                                    <h5 class="mt-4">Telefone</h5>
+                                    <p>Zap: 63-3329-4032</p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="service py-5 px-4 border">
+                                    <div class="service-icon">
+                                        <ion-icon name="globe-outline"></ion-icon>
+                                    </div>
+                                    <h5 class="mt-4">Website</h5>
+                                    <p><a href="https://ww2.uft.edu.br/index.php/contatos"
+                                            target="_blank">ww2.uft.edu.br/contatos</a></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </section>
+
+
+
+
+                <footer class="mt-5 py-5">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-md-4 text-center">
+                                <div class="footer-logo">
+                                    <img src="../img/marcaUFT_vertical_fundotransparente_RGB.png" class="img-fluid"
+                                        style="max-width: 150px; height: auto;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mt-3">
+                            <div class="col-md-4 text-center">
+                                <p class="mb-0">Copyright 2023 | Feito por Deusmar Borba</p>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+                <div class="scroll-up-btn">
+                    <ion-icon name="arrow-up-circle-outline"></ion-icon>
                 </div>
-            </div>
-            <div class="row justify-content-center mt-3">
-                <div class="col-md-4 text-center">
-                    <p class="mb-0">Copyright 2023 | Feito por Deusmar Borba</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div class="scroll-up-btn">
-        <ion-icon name="arrow-up-circle-outline"></ion-icon>
-    </div>
-    <!-- Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Outros-->
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-    <!-- Icons e outros-->
-    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <!-- JS do código -->
-    <script src="../js/main.js"></script>
+                <!-- Bootstrap JS-->
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+                <!-- Outros-->
+                <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+                <!-- Icons e outros-->
+                <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
+                <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+                <!-- JS do código -->
+                <script src="../js/main.js"></script>
 </body>
+
 </html>
