--- a/index.html
+++ b/index.html
@@ -1808,15 +1808,15 @@
 
   <section id="Contato" class="section-padding section-connector">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="section-title text-center">
-            <h1>Contatos</h1>
-            <p>Encontre nossas informações de contato abaixo.</p>
-            <div class="line"></div>
+        <div class="row">
+          <div class="col-12">
+            <div class="setion-title text-center">
+              <h1>Contato</h1>
+              <p>Em caso de alguma dúvida entre em contato conosco nos seguintes canais abaixo</p>
+              <div class="line"></div>
+            </div>
           </div>
         </div>
-      </div>
 
       <div class="row gy-4 text-center justify-content-center">
         <div class="col-lg-4 col-sm-6">
