--- a/Páginas/SimuladorDeCotas.html
+++ b/Páginas/SimuladorDeCotas.html
@@ -49,18 +49,6 @@
     </nav>
 
 
-    <!-- Home -->
-    <section id="home" class="d-flex align-items-center min-vh-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1 class="display-2 fw-bold" data-aos="fade-up"><span class="text-brand"></span></h1>
-                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5"></h4>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <section id="Simulador" class="section-padding section-connector">
         <div class="container">
@@ -68,7 +56,7 @@
                 <div class="col-12">
                     <div class="section-title text-center">
                         <h1>Simulador</h1>
-                        <p>Utilize nosso Simulador de Cotas e descubra as oportunidades que estão disponíveis para você!
+                        <p>Utilize nosso Simulador de Modalidades e descubra as oportunidades que estão disponíveis para você!
                             Estamos aqui para ajudá-lo(a) a entender melhor as cotas e tornar seu processo de
                             candidatura mais claro e transparente. Desejamos sucesso em sua jornada e que você possa
                             aproveitar todas as oportunidades que estiverem ao seu alcance.</p>
